--- a/style.css
+++ b/style.css
@@ -11,3 +11,44 @@ body {
   padding: 2.5vw 5vw;
   background-color: #222;
 }
+
+h1 {
+  font-size: clamp(2rem, 7vw, 90px);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 span:nth-child(1) {
+  font-weight: 700;
+}
+
+h1 span:nth-child(2) {
+  font-weight: 100;
+}
+
+.line {
+  width: 1px;
+  margin: calc(2vw + 1.25rem) auto;
+  background-color: #f1f1f1;
+  height: clamp(125px, 10vw, 250px);
+}
+
+.images-container {
+  display: grid;
+  max-width: 800px;
+  margin: 0 auto;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.25rem;
+}
+
+.images-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
