--- a/style.css
+++ b/style.css
@@ -50,5 +50,5 @@ h1 span:nth-child(2) {
   height: 100%;
   object-fit: cover;
   opacity: 0;
-  transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out 0.05s;
 }
